@@ -8,6 +8,12 @@ Fix to fetchSubjectReport for compatibility with pre-html subject comments.
 New external book for a Calendar added (currently only works with a
 public Google Calendar).
 
+Changed the main book include script to use tabname and as the
+optional switch for activating externalbooks.
+
+New profile option called celldisplay (othertype field in categorydef
+table) for displaying extra content in the MarkBook.
+
 
 
 Version ClaSS-1.0.38 release (2012/12/10)
